--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,17 @@ body {
     padding: 10px;
     border: 1px solid rgb(44, 20, 20);
 }
-.userForm{
+
+.userForm {
     display: block;
     width: 139px;
     height: 40px;
-    margin:0 auto;
+    margin: 0 auto;
     /* border: 1px solid red; debuger */
-} 
+}
+
 input[type=tel] {
-    width:130px;
+    width: 130px;
     text-align: center;
     font-size: 30px;
     line-height: 32px;
@@ -40,7 +42,8 @@ input[type=tel]:active {
 input[type=tel]:focus {
     outline: none;
 }
-.check{
+
+.check {
     display: block;
     text-align: center;
     width: 100px;
@@ -53,7 +56,7 @@ input[type=tel]:focus {
     border-radius: 5px;
 }
 
-.userSugestions{
+.userSugestions {
     font-size: 13px;
     font-style: italic;
     /* border: 1px solid gray;  */
@@ -63,7 +66,8 @@ input[type=tel]:focus {
     overflow-x: hidden;
     overflow-y: auto;
 }
-.userGuessIt{
+
+.userGuessIt {
     display: block;
     width: 50%;
     margin: -20px auto 0;
@@ -72,6 +76,7 @@ input[type=tel]:focus {
     color: #222222;
 
 }
+
 a.loadNew {
     display: block;
     width: 150px;
@@ -83,7 +88,7 @@ a.loadNew {
     line-height: 45px;
     border: 1px solid rgb(44, 20, 20);
     border-radius: 5px;
-
+}
 
 /* -----     media queries ----*/
 
@@ -105,18 +110,35 @@ a.loadNew {
 
 @media only screen and (max-width: 600px) {
     .wrapper {
-        border: none;
-        margin: 0;
+        width: 280px;
+        min-height: 200px;
+        height: auto;
+        margin: 20px auto 0;
+        padding: 10px;
+        border: 1px solid rgb(44, 20, 20);
     }
+
     .userForm {
-        margin: 100px auto;
+        margin: 50px auto;
     }
-    .userSugestions{
+
+    .userGuessIt {
+        display: block;
+        width: 87%;
+        height: 200px;
+        margin: -20px auto 0;
+        padding: 50px 0;
+        text-align: center;
+        background-color: rgb(255 0 204);
+        color: #222222;
+    }
+
+    .userSugestions {
         font-size: 14px;
         font-style: italic;
-        border: 1px solid gray; 
+        border: 1px solid gray;
         width: 210px;
-        max-height: 300px;
+        max-height: 200px;
         margin: 70px auto;
         overflow-x: hidden;
         overflow-y: scroll;
