--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 input[type=tel] {
     width: 130px;
     text-align: center;
-    font-size: 30px;
+    font-size: 26px;
     line-height: 32px;
     letter-spacing: 15px;
     margin: 0 -2px;
@@ -33,6 +33,7 @@ input[type=tel] {
     outline: none;
     border: none;
     border: 1px solid rgba(0, 0, 0, 0.206);
+    border-radius: 5px;
 }
 
 input[type=tel]:active {
@@ -61,8 +62,8 @@ input[type=tel]:focus {
     font-style: italic;
     /* border: 1px solid gray;  */
     width: 200px;
-    max-height: 300px;
-    margin: -37px 0 0 0;
+    max-height: 200px;
+    margin: 0px 0 0 0;
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -70,11 +71,18 @@ input[type=tel]:focus {
 .userGuessIt {
     display: block;
     width: 50%;
-    margin: -20px auto 0;
+    margin: 20px auto;
     text-align: center;
+    font-size: 20px;
+    text-shadow: 0px 3px 3px #222;
     background-color: rgb(255, 0, 204);
-    color: #222222;
+    color: #dbdbdb;
+    border-radius: 5px;
 
+}
+
+.numberColor {
+    color: rgb(21, 255, 0);
 }
 
 a.loadNew {
@@ -85,9 +93,17 @@ a.loadNew {
     font-size: 20px;
     text-decoration: none;
     text-align: center;
+    color: rgb(250 0 162);
+    text-shadow: 0px 1px 2px #555;
     line-height: 45px;
     border: 1px solid rgb(44, 20, 20);
     border-radius: 5px;
+}
+
+a.loadNew:visited,
+a.loadNew:active,
+a.loadNew:focus {
+    color: rgb(250 0 162);
 }
 
 /* -----     media queries ----*/
@@ -111,7 +127,7 @@ a.loadNew {
 @media only screen and (max-width: 600px) {
     .wrapper {
         width: 280px;
-        min-height: 200px;
+        min-height: 400px;
         height: auto;
         margin: 20px auto 0;
         padding: 10px;
@@ -122,26 +138,17 @@ a.loadNew {
         margin: 50px auto;
     }
 
-    .userGuessIt {
-        display: block;
-        width: 87%;
-        height: 200px;
-        margin: -20px auto 0;
-        padding: 50px 0;
-        text-align: center;
-        background-color: rgb(255 0 204);
-        color: #222222;
-    }
-
     .userSugestions {
         font-size: 14px;
-        font-style: italic;
-        border: 1px solid gray;
+        /* border: 1px solid gray; */
         width: 210px;
-        max-height: 200px;
-        margin: 70px auto;
-        overflow-x: hidden;
-        overflow-y: scroll;
+        max-height: 180px;
+        margin: 70px auto 20px;
+    }
+
+    .userGuessIt {
+        width: 87%;
+        margin: 0 auto;
     }
 
 }
