--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     margin: 20px auto 0;
     padding: 10px;
     border: 1px solid rgb(44, 20, 20);
+    border-radius: 5px;
 }
 
 .userForm {
