--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,33 @@ a.loadNew:focus {
 
 /* // Extra large devices (large desktops, 1200px and up) */
 
-/* @media (min-width: 1200px) {} */
+@media (min-width: 1200px) {
+    .wrapper {
+        width: 280px;
+        min-height: 400px;
+        height: auto;
+        margin: 20px auto 0;
+        padding: 10px;
+        border: 1px solid rgb(44, 20, 20);
+    }
+
+    .userForm {
+        margin: 50px auto;
+    }
+
+    .userSuggestions {
+        font-size: 14px;
+        /* border: 1px solid gray; */
+        width: 210px;
+        max-height: 180px;
+        margin: 70px auto 20px;
+    }
+
+    .userGuessIt {
+        width: 87%;
+        margin: 0 auto;
+    }
+}
 
 @media only screen and (max-width: 600px) {
     .wrapper {
