--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,10 @@ input[type=tel]:focus {
     margin: 120px auto 40px;
     text-align: center;
     font-size: 20px;
-    text-shadow: 0px 3px 3px #222;
-    background-color: rgb(56 56 56);
-    color: #dbdbdb;
+    text-shadow: 0px 2px 3px #555;
+    background-color: rgb(46,46,46);
+    color: #fefefe;
     border-radius: 5px;
-
 }
 
 .numberColor {
