dark theme - github inspired

--- a/css/startStyle.css
+++ b/css/startStyle.css
@@ -13,6 +13,7 @@ body {
     padding: 10px;
     border: 1px solid rgb(135, 135, 135);
     border-radius: 5px;
+    box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
 }
 
 .imgDiv {
@@ -74,6 +75,7 @@ a.howToPlay,
     line-height: 45px;
     border: 1px solid rgb(135, 135, 135);
     border-radius: 5px;
+    box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
 }
 .howToPlay {
     margin: 75px -1px 0 0;
