--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,9 @@ input[type=tel] {
     padding: 0 0 0 10px;
     outline: none;
     border: none;
-    border: 1px solid rgba(0, 0, 0, 0.206);
+    border: 1px solid rgba(0, 0, 0, 0.395);
     border-radius: 5px;
+    box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
 }
 
 input[type=tel]:active {
@@ -64,6 +65,7 @@ input[type=tel]:focus {
     line-height: 50px;
     border: 1px solid black;
     border-radius: 5px;
+    box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
 }
 
 .userSuggestions {
@@ -83,13 +85,14 @@ input[type=tel]:focus {
     text-align: center;
     font-size: 20px;
     text-shadow: 0px 2px 3px #555;
-    background-color: rgb(46,46,46);
-    color: #fefefe;
+    background-color: #F3F4F6
+    color: #3D4147;
     border-radius: 5px;
+    box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
 }
 
 .numberColor {
-    color: rgb(21, 255, 0);
+    color: #33a739
 }
 
 a.loadNew {
@@ -105,6 +108,7 @@ a.loadNew {
     line-height: 45px;
     border: 1px solid rgb(56 56 56);
     border-radius: 5px;
+    box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
 }
 
 a.loadNew:visited,
