--- a/css/themeStyleBlack.css
+++ b/css/themeStyleBlack.css
@@ -1,21 +1,41 @@
 body {
-    background-color: #222222;
-    color: #dcdcdc;
+    background-color: #1C2128;
+    color: #9e9e9e;
+}
+input[type=tel] {
+background-color: #9e9e9e;
+color: #1C2128;
+}
+.check,
+a.loadNew {
+    background-color: #22272E;
+    color: #9e9e9e;
+}
+
+a.loadNew:visited,
+a.loadNew:active,
+a.loadNew:focus {
+    color: #9e9e9e;
+}
+.check:hover,
+a.loadNew:hover {
+    background-color: #373c43;
+    color: #74a5d9;
 }
 .wrapper,
-.check {
+.check,
+a.loadNew {
     border: 1px solid rgb(195, 195, 195);
 }
 .userGuessIt {
-
-    background-color: #fefefe;
-
+    background-color: #373c43;
+    color: #74a5d9;
+}
+.numberColor {
+    color: #46954A
 }
 
-a.loadNew:visited, a.loadNew:active, a.loadNew:focus {
-    color: #dcdcdc;
-}
-a.loadNew {
-    border: 1px solid rgb(195, 195, 195);
+/* a.loadNew:visited, a.loadNew:active, a.loadNew:focus {
+    color: #74a5d9;
+} */
 
-}
