--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ input[type=tel] {
     font-size: 26px;
     line-height: 32px;
     letter-spacing: 15px;
+    text-shadow: 1px 2px 1px #8f8b8bc4;
     margin: 20px -2px 0;
     padding: 0 0 0 10px;
     outline: none;
