--- a/css/themeStyleBlack.css
+++ b/css/themeStyleBlack.css
@@ -5,6 +5,8 @@ body {
 input[type=tel] {
 background-color: #9e9e9e;
 color: #1C2128;
+text-shadow: 1px 1px 1px #e5e2e2c4;
+border: 1px solid rgb(195, 195, 195);
 }
 .check,
 a.loadNew {
@@ -26,6 +28,9 @@ a.loadNew:hover {
 .check,
 a.loadNew {
     border: 1px solid rgb(195, 195, 195);
+}
+.userSuggestions {
+    text-shadow: 1px 1px 2px rgb(195 195 195 / 23%);
 }
 .userGuessIt {
     background-color: #373c43;
