--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
     padding: 10px;
     border: 1px solid rgb(44, 20, 20);
     border-radius: 5px;
+    box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
 }
 
 .theme {
@@ -86,7 +87,7 @@ input[type=tel]:focus {
     text-align: center;
     font-size: 20px;
     text-shadow: 0px 2px 3px #555;
-    background-color: #F3F4F6
+    background-color: #F3F4F6;
     color: #3D4147;
     border-radius: 5px;
     box-shadow: 2px 0px 10px rgb(138 138 138 / 60%);
